--- a/ziox-web/css/estilos.css
+++ b/ziox-web/css/estilos.css
@@ -1,19 +1,77 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 #header {
-    height: 50vh;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.5587185557816876) 25%, rgba(0,212,255,0.5082983877144608) 100%), url(https://images.unsplash.com/photo-1498409785966-ab341407de6e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=8a87674644cd4f622df5c57facbccf1e&auto=format&fit=crop&w=1060&q=80);
+    /* linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.5587185557816876) 25%, rgba(0,212,255,0.5082983877144608) 100%)*/
+    background: rgb(2,0,36);
+    background: -moz-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.5503151944371498) 25%, rgba(0,212,255,0.469082701439951) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.5503151944371498) 25%, rgba(0,212,255,0.469082701439951) 100%);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,0.5503151944371498) 25%, rgba(0,212,255,0.469082701439951) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#00d4ff",GradientType=1);overflow: hidden;
+    background-size: cover;
+    background-attachment: fixed;
+    height: 400px;
 }
 
+
 .display-1 {
+    padding-top: 10px;
     color: white;
 }
 
 .display-4 {
     color: white;
+    padding-bottom: 50px;
 }
+
+#Pres {
+    padding-top: 70px;
+    padding-bottom: 40px;
+    font-family: Raleway, sans-serif;
+}
+
 #DivServicios{
 }
-#Pres {
+
+#TarjetasServ{
+    margin: 30px;
+}
+
+#middle-img{
+
+    background: rgb(73,9,122);
+    background: -moz-linear-gradient(90deg, rgba(73,9,122,0.30101547454919464) 0%, rgba(34,123,227,0.4634804605435925) 54%, rgba(13,2,75,0.4606793400954131) 100%);
+    background: -webkit-linear-gradient(90deg, rgba(73,9,122,0.30101547454919464) 0%, rgba(34,123,227,0.4634804605435925) 54%, rgba(13,2,75,0.4606793400954131) 100%);
+    background: linear-gradient(90deg, rgba(73,9,122,0.30101547454919464) 0%, rgba(34,123,227,0.4634804605435925) 54%, rgba(13,2,75,0.4606793400954131) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#49097a",endColorstr="#0d024b",GradientType=1);
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    height: 400px;
+}
+
+
+
+#particles-js{
+    
+    height: 400px;
+    position: absolute;
+    z-index: 0;
+}
+
+#holo{
+    height: 350px;
+    background-color: black;
+    
+}
+
+#creadores {
+    margin: 30px;
+}
+
+#cardCreator {
     padding: 20px;
-    font-family: Raleway, sans-serif;
+}
+
+.rounded-circle{
+    width: 60%;
+    height: auto;
 }
