--- a/ziox-web/css/estilos.css
+++ b/ziox-web/css/estilos.css
@@ -26,6 +26,10 @@ body{
     color: white;
 }
 
+.display-2 {
+    color: white;
+}
+
 .display-4 {
     color: white;
     padding-bottom: 50px;
@@ -41,7 +45,8 @@ body{
 }
 
 #TarjetasServ{
-    margin: 30px;
+    margin-top: 30px;
+    margin-bottom: 90px;
     padding-left: 150px;
     padding-right: 150px;
 }
@@ -65,19 +70,26 @@ body{
     z-index: 0;
 }
 
+#presentacion {
+    padding-top: 150px;
+    color: white;
+}
+
 #creadores {
-    margin: 30px;
+    margin-top: 90px;
+    margin-bottom: 90px;
     padding-left: 150px;
     padding-right: 150px;
 }
 
 #cardCreator {
-    padding: 20px;
+    
 }
 
 .rounded-circle{
     width: 60%;
     height: auto;
+    margin: 20px;
 }
 
 #footer{
@@ -91,8 +103,14 @@ body{
     height: 400px;
 }
 
+.footerfont {
+    color: white;
+    font-size: 50px;
+    background-color: red;
+}
+
 /* Padding en tarjetas */
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1024px) {
     #TarjetasServ {
         padding-left: 0px;
         padding-right: 0px;
